--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "deploy:logs": "pm2 logs",
     "deploy:monitor": "pm2 monit",
     "db:create-indexes": "tsx src/scripts/create-indexes.ts",
-    "cleanup": "tsx src/scripts/cleanup/run-cleanup.ts"
+    "cleanup": "tsx src/scripts/cleanup/run-cleanup.ts",
+    "test:perf": "jest src/lib/services/__tests__/auth.service.perf.test.ts --runInBand"
   },
   "dependencies": {
     "@clerk/backend": "^0.38.0",
@@ -70,6 +71,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -79,11 +82,13 @@
     "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
+    "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
