--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,11 @@ jobs:
         if [ "${{ github.ref }}" = "refs/heads/main" ]; then
           echo "host=favely.net" >> $GITHUB_OUTPUT
           echo "user=favely" >> $GITHUB_OUTPUT
+          echo "env_file=.env.production" >> $GITHUB_OUTPUT
         else
           echo "host=curate-dev.fileopia.com" >> $GITHUB_OUTPUT
           echo "user=fileopia-curate-dev" >> $GITHUB_OUTPUT
+          echo "env_file=.env.development" >> $GITHUB_OUTPUT
         fi
     
     - name: Setup Node.js
@@ -40,6 +42,9 @@ jobs:
       env:
         NODE_OPTIONS: '--max-old-space-size=4096'
         MONGODB_URI_V2: ${{ secrets.MONGODB_URI }}
+
+    - name: Create deployment archive
+      run: tar -czf deployment.tar.gz .next node_modules package.json package-lock.json start.sh ${{ steps.set-target.outputs.env_file }}
     
     - name: Deploy
       uses: appleboy/ssh-action@v1.0.0
@@ -57,21 +62,52 @@ jobs:
           # Stop the application
           pm2 delete ${{ steps.set-target.outputs.host }} || true
           
+          # Backup current env file if it exists
+          if [ -f .env.development ]; then
+            cp .env.development .env.development.backup
+          fi
+          if [ -f .env.production ]; then
+            cp .env.production .env.production.backup
+          fi
+          
           # Clean up
           rm -rf .next
           rm -rf node_modules
           
           # Pull latest changes
           git pull origin ${{ github.ref_name }}
+
+    - name: Copy deployment files
+      uses: appleboy/scp-action@v0.1.7
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ steps.set-target.outputs.user }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        source: "deployment.tar.gz"
+        target: "/home/${{ steps.set-target.outputs.user }}/htdocs/${{ steps.set-target.outputs.host }}"
+
+    - name: Extract and start application
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ steps.set-target.outputs.user }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        script: |
+          cd /home/${{ steps.set-target.outputs.user }}/htdocs/${{ steps.set-target.outputs.host }}
           
-          # Install all dependencies
-          npm ci
+          # Extract deployment archive
+          tar -xzf deployment.tar.gz
+          rm deployment.tar.gz
           
-          # Build the application
-          npm run build
-          
-          # Remove dev dependencies
-          npm prune --production
+          # Restore environment variables from backup if they exist
+          if [ -f .env.development.backup ]; then
+            mv .env.development.backup .env.development
+          fi
+          if [ -f .env.production.backup ]; then
+            mv .env.production.backup .env.production
+          fi
           
           # Start the application
           pm2 start ecosystem.config.js
