--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@clerk/nextjs": "^5.7.5",
     "@clerk/themes": "^1.7.19",
     "@clerk/types": "^3.65.4",
-    "@hello-pangea/dnd": "^17.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -44,10 +46,6 @@
     "@sentry/nextjs": "^7.x",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-virtual": "^3.11.2",
-    "@tiptap/extension-bubble-menu": "^2.11.5",
-    "@tiptap/pm": "^2.11.3",
-    "@tiptap/react": "^2.11.3",
-    "@tiptap/starter-kit": "^2.11.3",
     "@types/dompurify": "^3.0.5",
     "@types/nodemailer": "^6.4.17",
     "@upstash/redis": "^1.34.3",
